--- a/src/main/resources/templates/updateOrDeleteFeedbackView.html
+++ b/src/main/resources/templates/updateOrDeleteFeedbackView.html
@@ -57,12 +57,10 @@
                     </div>
                     <div id="myNav" class="overlay">
                         <div class="overlay-content">
-                            <a href="index.html">Home</a>
-                            <a href="about.html">About</a>
-                            <a href="car.html">Cars</a>
-                            <a href="blog.html">Blog</a>
-                            <a href="contact.html">Contact Us</a>
-                            <a href="#">Login</a>
+                            <a th:href="@{/home/about}">About</a>
+                            <a th:href="@{/travel/new}">Create Travel</a>
+                            <a th:href="@{/travel}">Search Travel</a>
+                            <a th:href="@{/auth/login}">Login</a>
                         </div>
                     </div>
                 </div>
