--- a/src/main/resources/templates/createFeedbackView.html
+++ b/src/main/resources/templates/createFeedbackView.html
@@ -70,18 +70,12 @@
             <div class="col-md-8 mx-auto">
                 <div class="form_container">
                     <h2>Feedback Form</h2>
-                    <form th:action="@{/feedback/create}" method="post" th:object="${feedback}">
+                    <form th:action="@{/feedback/create/{travelId}(travelId = ${travel.id})}" method="post" th:object="${feedback}">
                         <label for="text">Feedback Text:</label><br>
                         <textarea id="text" name="text" rows="4" cols="50" th:field="*{text}" required></textarea><br>
 
                         <label for="rating">Rating:</label><br>
                         <input type="number" id="rating" name="rating" min="1" max="5" th:field="*{rating}" required><br>
-
-                        <label for="travelId">Choose Travel:</label><br>
-                        <select id="travelId" name="travelId" th:field="*{travelId}">
-                            <option value="" disabled selected>Select Travel</option>
-                            <option th:each="travel : ${travels}" th:value="${travel}" th:text="${travel.driverId.username}"></option>
-                        </select>
 
                         <!-- Error messages for text -->
                         <div th:if="${#fields.hasErrors('text')}" th:errors="*{text}" style="color: red"></div><br>
