--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,7 +87,7 @@
                                     Rate Drivers <br>
                                     Save Money
                                 </h1>
-                                <a th:href="@{/api/register}">Register</a>
+                                <a th:href="@{/auth/register}" class="primary-btn">Register Now</a>
                             </div>
                         </div>
                         <div class="carousel-item">
