--- a/src/main/resources/templates/registerView.html
+++ b/src/main/resources/templates/registerView.html
@@ -49,9 +49,7 @@
 
                 <div class="navbar-collapse" id="">
                     <div class="user_option">
-                        <a href="">
-                            Login
-                        </a>
+                        <a th:href="@{/auth/login}">Login</a>
                     </div>
                     <div class="custom_menu-btn">
                         <button onclick="openNav()">
