--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -156,7 +156,7 @@
                     <div th:if="${topUsers.size() == 0}">
                         No users found.
                     </div>
-                    <a th:href="@{/user/profile/1}">Contact user</a>
+                    <a th:href="@{/user/1}">Contact user</a>
                 </div>
             </div>
             <div class="box">
@@ -180,7 +180,7 @@
                     <div th:if="${topUsers.size() == 0}">
                         No users found.
                     </div>
-                    <a th:href="@{/user/profile/2}">Contact user</a>
+                    <a th:href="@{/user/2}">Contact user</a>
                 </div>
             </div>
             <div class="box">
@@ -204,7 +204,7 @@
                     <div th:if="${topUsers.size() == 0}">
                         No users found.
                     </div>
-                    <a th:href="@{/user/profile/3}">Contact user</a>
+                    <a th:href="@{/user/3}">Contact user</a>
                 </div>
             </div>
         </div>
