--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -61,10 +61,7 @@
                         <div class="overlay-content">
                             <a href="index.html">Home</a>
                             <a th:href="@{/home/about}">About</a>
-                            <a href="car.html">Cars</a>
                             <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
-                            <a href="blog.html">Blog</a>
-                            <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -86,6 +83,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto">
                 <div class="form_container">
+
                     <section class="login spad">
                         <div class="container">
                             <div class="row">
@@ -173,15 +171,19 @@
                             </div>
                         </div>
                     </section>
+                </div>
+            </div>
+        </div>
+        <!-- end contact section -->
 
-                    <!-- end contact section -->
+
+        <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/js/bootstrap.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+        </script>
+        <script src="/js/custom.js"></script>
 
 
-                    <script src="/js/jquery-3.4.1.min.js"></script>
-                    <script src="/js/bootstrap.js"></script>
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-                    </script>
-                    <script src="/js/custom.js"></script>
 </body>
 <!-- footer section -->
 <footer class="container-fluid footer_section">
