--- a/src/main/resources/templates/createFeedbackView.html
+++ b/src/main/resources/templates/createFeedbackView.html
@@ -70,12 +70,22 @@
             <div class="col-md-8 mx-auto">
                 <div class="form_container">
                     <h2>Feedback Form</h2>
-                    <form th:action="@{/feedback/create/{travelId}(travelId = ${travel.id})}" method="post" th:object="${feedback}">
+                    <form th:action="@{/feedback/create}" method="post" th:object="${feedback}">
                         <label for="text">Feedback Text:</label><br>
-                        <textarea id="text" name="text" rows="4" cols="50" th:field="*{text}" required></textarea><br>
+                        <textarea id="text" name="text" rows="4" cols="50" required></textarea><br>
 
                         <label for="rating">Rating:</label><br>
-                        <input type="number" id="rating" name="rating" min="1" max="5" th:field="*{rating}" required><br>
+                        <input type="number" id="rating" name="rating" min="1" max="5" required><br>
+
+                        <!-- Include a field for selecting the travel ID -->
+                        <label for="travelId">Select User:</label>
+                        <input type="hidden" id="travelId" name="travelId" th:value="${selectedTravelId}" />
+                            <option th:each="username : ${usernames}"
+                                    th:value="${username}"
+                                    th:text="${username}">
+
+                            </option>
+                        </select>
 
                         <!-- Error messages for text -->
                         <div th:if="${#fields.hasErrors('text')}" th:errors="*{text}" style="color: red"></div><br>
@@ -141,12 +151,6 @@
 
 <!-- end contact section -->
 <script>
-    function redirectToPage(select) {
-        var selectedOption = select.options[select.selectedIndex].value;
-        if (selectedOption) {
-            window.location.href = selectedOption;
-        }
-    }
 </script>
 
 <script src="/js/jquery-3.4.1.min.js"></script>
