--- a/src/main/resources/templates/feedbackView.html
+++ b/src/main/resources/templates/feedbackView.html
@@ -91,7 +91,7 @@
                 }
 
                 th {
-                    background-color: #f2f2f2;
+                    background-color: #0000be;
                 }
             </style>
             <table>
