--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -59,7 +59,7 @@
                     </div>
                     <div id="myNav" class="overlay">
                         <div class="overlay-content">
-                            <a href="index.html">Home</a>
+                            <a th:href="@{/home}">Home</a>
                             <a th:href="@{/home/about}">About</a>
                             <a th:href="@{/feedback/new/createFeedbackView}">Feedback for Users</a>
                         </div>
